--- a/style/style.css
+++ b/style/style.css
@@ -47,3 +47,36 @@ ul{
     line-height: 18px;
     color: white;
 }
+.main__cars {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-auto-rows: 265px;
+    gap: 30px;
+}
+.main__cars-item {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.main__cars-item:first-of-type {
+    grid-row: span 2;
+}
+.main__cars-img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+}
+.main__link {
+    background: #4A90E2;
+    border-radius: 3px;
+    padding: 3px 5px;
+}
+body {
+    background: #4A90E2;
+}
